Day4/Day5/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: my-svc
  namespace: murali-ns
spec:
  selector:
    app: bank
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
