Day4/Day5/ingress.yaml
# To install ingress 
#  kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/cloud/deploy.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: murali-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 3000
